Change btn .on so that it targets '.container', which is present when the DOM is ready because it is not dynamically created.  Also, added .remove() as a callback function inside fadeOut. Also, added Cyborg theme via a Bootstrap.min.css page.  Big thanks to Rom for helping with some troubleshooting

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
+		<link href="bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="Cyborgstylesheet.css">
 
 		<script src="jquery.min.js"></script>
